--- a/colourGame/home.html
+++ b/colourGame/home.html
@@ -225,7 +225,7 @@ function addPoint(){
 }
 
 function checkTime(){
-  if (parseInt(timer.innerHTML) > 59){
+  if (parseInt(timer.innerHTML) = 59){
     alert("Game Over! You scored " + points + " points");   
     // name = prompt("Please enter your name");
     $("#gameWindow").hide("slow");
