Changed Game Instructions

--- a/colourGame/home.html
+++ b/colourGame/home.html
@@ -22,7 +22,8 @@ body {
 
 #gameWindow{
   position: absolute;
-  width: 450%;
+  width: 400%;
+  z-index: 15;
   top: 50%;
   left: 50%;
   margin: -100px 0 0 -200px;
@@ -43,7 +44,7 @@ body {
 }
 
 #colourButton{
-  height: 80px;
+  height: 100px;
   width: 300px;
   background: white;
   font-size: 200%;
@@ -80,6 +81,7 @@ body {
 
 
 <button id="startButton">Start</button>
+<br>
 <div id="gameWindow">
 
 	<div id="container">
